--- a/includes/.env
+++ b/includes/.env
@@ -1,12 +1,16 @@
 DB_HOST=localhost
-DB_USER=admin
-DB_PASS=1234
-DB_NAME=tardeowindup
+DB_USER=u871544573_mktpartyuser
+DB_PASS=mkt54102387Q!
+DB_NAME=u871544573_mktparty
+
+#EMAIL_HOST=smtp.hostinger.com
+#EMAIL_PORT=465
+#EMAIL_USER=hola@franrubio.dev
+#EMAIL_PASS=x&p6^47iBy^UK^i0
 
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=2525
 EMAIL_USER=d6ec36d5f0492f
 EMAIL_PASS=6e525941d38db7
 
-HOST=http://localhost:3000
-
+HOST=mktparty.franrubio.dev
